# Foudre

./: LICENSE  package.json  pnpm-lock.yaml  tailwind.config.js
src/: global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/src/: main.rs
src/components/: App.tsx  NavBar.tsx
src/components/NavBar/: ButtonsAnimation.tsx  FillProvider.tsx  FloatProvider.tsx  index.tsx
