[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "foudre"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1", features = []}

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "1", features = ["shell-open"]}
tauri-plugin-window-state = {git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1"}

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
